add image weatherApp

--- a/pages/WeatherApp/weatherApp.html
+++ b/pages/WeatherApp/weatherApp.html
@@ -25,7 +25,7 @@
                     </button>
                 </div>
                 <div class="bodyWeather">
-                    <img src="https://cdn2.iconfinder.com/data/icons/weather-flat-14/64/weather02-512.png" alt="Weather Sun" style="width: 200px; height: 200px;" id="imgWeather">
+                    <img src="https://cdn2.iconfinder.com/data/icons/weather-flat-14/64/weather02-512.png" alt="Weather Sun" style="width: 200px; height: 200px;" id="  ">
                     <h2 class="weather__temperature" id="weather__temperature">42°C</h2>
                     <h3 class="weather__cityName" id="weather__cityName">New York</h3>
                 </div>
