fix aynsc function weather

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Javascript</title>
 </head>
 <body>
-    <a href="./pages/weatherApp.html">Weather App</a>
+    <a href="./pages/WeatherApp/weatherApp.html">Weather App</a>
     <h1>Variable</h1>
     <h3>Let, Const, Var</h3>
     <ul>
