--- a/pages/WeatherApp/weatherApp.html
+++ b/pages/WeatherApp/weatherApp.html
@@ -12,7 +12,12 @@
 </head>
 <body>
     <div class="weatherApp">
-        <div class="block">
+        <select class="theme" id="theme">
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+        </select>
+        <div class="classic-3" id="classic-3">Loading...</div>
+        <div class="block" id="block">
             <div class="container">
                 <div class="headerWeather">
                     <div class="search">
