--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="./pages/WeatherApp/weatherApp.html">Weather App</a>
+    <a href="./pages/Expense Tracker/ExpenseTracker.html">Expense Tracker App</a>
     <h1>Variable</h1>
     <h3>Let, Const, Var</h3>
     <ul>
