done Calculation App

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <a href="./pages/WeatherApp/weatherApp.html">Weather App</a>
     <a href="./pages/Expense Tracker/ExpenseTracker.html">Expense Tracker App</a>
+    <a href="./pages/Calculation App/calculationApp.html">Calculation App</a>
     <h1>Variable</h1>
     <h3>Let, Const, Var</h3>
     <ul>
@@ -96,6 +97,11 @@
         <button type="submit" id="btnLogin">Login</button>
     </form>
     <h3 id="infoUser"></h3>
+    <h3>FAQ/h3>
+    <div class="faq">1</div>
+    <div class="faq">2</div>
+    <div class="faq">3</div>
+    <div class="faq">4</div>
 </body>
 <script src="./src/main.js" type="module"></script>
 </html>
