--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="./pages/WeatherApp/weatherApp.html">Weather App</a>
     <a href="./pages/Expense Tracker/ExpenseTracker.html">Expense Tracker App</a>
     <a href="./pages/Calculation App/calculationApp.html">Calculation App</a>
+    <a href="./pages/Shopping Cart/shoppingCart.html">Shoping Cart</a>
     <h1>Variable</h1>
     <h3>Let, Const, Var</h3>
     <ul>
